fix spacing

--- a/client/src/components/popularity.css
+++ b/client/src/components/popularity.css
@@ -6,7 +6,7 @@
 
 #track-name {
     color:#312E50;
-    font-size: 2.7vh;
+    font-size: 2.3vh;
     font-weight: bold;
     margin-left: 1.5vh;
     margin-right: 3vh;
@@ -14,7 +14,7 @@
 }
 
 #track-artist {
-    font-size: 2.3vh;
+    font-size: 2vh;
     text-align: left;
     font-weight: normal;
 }
